--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="A responsive web application for tracking project bugs">
   <title>::BUG-TRACKER</title>
+
+  <!-- Load bootstrap core CSS -->
+  <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom styles -->
+  <link href="css/style.css" rel="stylesheet">
+
 </head>
 <body>
 
