load static files

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,4 +16,8 @@
 <body>
 
 </body>
+
+<!-- Bootstrap core JavaScript -->
+<script src="libs/jquery/jquery.min.js"></script>
+<script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 </html>
