--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,22 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="A responsive web application for tracking project bugs">
   <title>::BUG-TRACKER</title>
-
+   
+   {% load staticfiles %}
   <!-- Load bootstrap core CSS -->
-  <link href="libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{% static 'libs/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
   <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
 </head>
 <body>
- 
 
  {% block content %} {% endblock %}
 
 </body>
 
 <!-- Bootstrap core JavaScript -->
-<script src="libs/jquery/jquery.min.js"></script>
-<script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'libs/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'libs/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </html>
