--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,15 @@
 </head>
 <body>
 
+ <!-- include navigation -->
+ {% include 'navigation.html' %}
+
+
+<div class="container">
+
  {% block content %} {% endblock %}
+ 
+</div>
 
 </body>
 
