--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,6 +9,7 @@
    {% load staticfiles %}
   <!-- Load bootstrap core CSS -->
   <link href="{% static 'libs/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
 
 </head>
