--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,15 @@
 
 {% block content %}
   
-  <h1>Put html content here..</h1>
+
+  <div class="row">
+  	<div class="col-lg-1"></div>
+  	<div class="col-lg-10">
+  		<br>
+         <h1 class="text-center">ALL BUGS</h1><br>
+  	</div>
+  	<div class="col-lg-1"></div>
+  	
+  </div>
 
 {% endblock %}
