project filter form

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,9 +8,17 @@
   	<div class="col-lg-10">
   		<br>
          <h1 class="text-center">ALL BUGS</h1><br>
+
+         <form>
+         	<select class="form-control">
+         		<option value="">Fitler By Project</option>
+         	</select>
+         </form>
   	</div>
   	<div class="col-lg-1"></div>
   	
   </div>
+
+
 
 {% endblock %}
