--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,23 +1,74 @@
 {% extends  'base.html' %}
 
 {% block content %}
-  
 
-  <div class="row">
-  	<div class="col-lg-1"></div>
-  	<div class="col-lg-10">
-  		<br>
-         <h1 class="text-center">ALL BUGS</h1><br>
+    <!-- Page Content -->
+    <div class="container">
 
-         <form>
-         	<select class="form-control">
-         		<option value="">Fitler By Project</option>
-         	</select>
-         </form>
-  	</div>
-  	<div class="col-lg-1"></div>
-  	
-  </div>
+      <div class="row">
+
+        <div class="col-lg-1"></div>
+        <!-- /.col-lg-3 -->
+
+        <div class="col-lg-10">
+          
+          <br>
+          <h1 class="text-center">ALL BUGS</h1><br>
+
+          <select class="form-control">
+            <option value="">Filter by project</option>
+            <option>Project1</option>
+          </select>
+
+        </div>
+        <!-- /.col-lg-12 -->
+
+        <div class="col-lg-1"></div>
+
+      </div>
+
+         
+          <div class="row" style="margin-top: 25px; margin-bottom: 25px;">
+
+            <div class="col-lg-4">
+               
+               <div class="card jumbotron">
+                <div class="card-body">
+                  <h4 class="card-title">Project name: Vodacom</h4>
+                  <h4 class="card-title">Bug Description</h4>
+                  <p class="card-text">Some quick example text to build content..</p>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="col-lg-4">
+             <div class="card jumbotron">
+                 <div class="card-body">
+                  <h4 class="card-title">Project name: African Bank</h4>
+                  <h4 class="card-title">Bug Description</h4>
+                  <p class="card-text">Some quick example text to build content.</p>
+                </div>
+            </div>
+            </div>
+
+            <div class="col-lg-4">
+              <div class="card jumbotron">
+                   <div class="card-body">
+                  <h4 class="card-title">Project name: CTM</h4>
+                  <h3 class="card-title">Bug Description</h3>
+                  <p class="card-text">Some quick example text to build content.</p>
+                </div>
+              </div>
+            </div>
+
+          </div>
+   
+
+    </div>
+    <!-- /.container -->
+
+
 
 
 
