Add url for creating a new bug

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -15,7 +15,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link" href="">Submit a bug</a>
+          <a class="nav-link" href="{% url 'submit_bug' %}">Submit a bug</a>
         </li>
       </ul>
     </div>
