--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
   <!-- Load bootstrap core CSS -->
   <link href="{% static 'libs/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  
 
 
 </head>
@@ -29,4 +30,15 @@
 <!-- Bootstrap core JavaScript -->
 <script src="{% static 'libs/jquery/jquery.min.js' %}"></script>
 <script src="{% static 'libs/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://cdn.ckeditor.com/ckeditor5/1.0.0-beta.1/classic/ckeditor.js"></script>
+
+
+<script>
+	// Add editingfeautures to text areas using ckeditor
+	  ClassicEditor
+        .create( document.querySelector( '#bug-editor' ) )
+        .catch( error => {
+            console.error( error );
+        } );
+</script>
 </html>
