--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -24,7 +24,7 @@
           </div>
 
           <div class="form-group">
-            <textarea class="form-control" placeholder="Desciptions of the bug" rows="5"></textarea>
+            <textarea class="form-control" id="bug-editor" placeholder="Desciptions of the bug"></textarea>
           </div>
 
           <div class="form-group text-center">
