--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,7 +15,7 @@
           <br>
           <h1 class="text-center">ALL BUGS</h1><br>
 
-          <select class="form-control">
+          <select class="form-control" id="project-filter">
             <option value="">Filter by project</option>
             <option>Project1</option>
           </select>
