--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -17,9 +17,10 @@
          
          <form>
             <div class="form-group">
-            <select class="form-control">
+            <select class="form-control" id="project-filter">
               <option value="">Select the project</option>
               <option>Project1</option>
+              <option>Vodacom Project</option>
             </select>
           </div>
 
