--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
           <h1 class="text-center">ALL BUGS</h1><br>
 
           <select class="form-control" id="project-filter">
-            <option value="">Filter by project</option>
+            <option value="">Filter By Project</option>
             <option>Project1</option>
           </select>
 
