--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -25,7 +25,7 @@
           </div>
 
           <div class="form-group">
-            <textarea class="form-control" id="bug-editor" placeholder="Desciptions of the bug"></textarea>
+            <textarea class="form-control" id="bug-editor" placeholder="Description of the bug"></textarea>
           </div>
 
           <div class="form-group text-center">
