--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -18,6 +18,7 @@
          <form action="{% url 'submit_bug' %}" method="POST">
             {% csrf_token %}
             <div class="form-group">
+              {{ form.project.errors }}
             <select class="form-control" id="project-filter" name="project">
               <option value="">Select the project</option>
               {% if projects %}
@@ -30,9 +31,18 @@
             </select>
           </div>
 
+
+           <div class="form-group">
+              {{ form.date_added.errors }}
+              <input type="date" name="date_created" class="form-control" placeholder="Choose">
+          </div>
+
           <div class="form-group">
+            {{ form.description.errors }}
             <textarea class="form-control" id="bug-editor" placeholder="Description of the bug" name="description"></textarea>
           </div>
+
+
 
           <div class="form-group text-center">
             <button type="submit" class="btn btn-success btn-lg">Submit</button>
