--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -34,7 +34,7 @@
 
            <div class="form-group">
               {{ form.date_added.errors }}
-              <input type="date" name="date_created" class="form-control" placeholder="Choose">
+              <input type="date" name="date_added" class="form-control" placeholder="Choose">
           </div>
 
           <div class="form-group">
