--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -14,6 +14,15 @@
           
           <br>
           <h1 class="text-center">SUBMIT A BUG</h1><br>
+          
+          {% if messages %}
+           {% for message in messages %}
+             <div class="alert alert-success" role="alert">
+              {{ message }}
+            </div>
+            {% endfor %}
+          {% endif %}
+
          
          <form action="{% url 'submit_bug' %}" method="POST">
             {% csrf_token %}
