Add animation  to success message

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,5 +49,7 @@
 
     // Add select2 to enhance project selection
     $('#project-filter').select2();
+    
+    $(".alert-success").slideUp(1500);
 </script>
 </html>
