--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,38 +29,31 @@
 
          
           <div class="row" style="margin-top: 25px; margin-bottom: 25px;">
-
+           
+           {% if bugs %}
+           {% for bug in bugs %}
             <div class="col-lg-4">
                
                <div class="card jumbotron">
                 <div class="card-body">
-                  <h4 class="card-title">Project name: Vodacom</h4>
-                  <h4 class="card-title">Bug Description</h4>
-                  <p class="card-text">Some quick example text to build content..</p>
+                  <h4 class="card-title">Project name: {{ bug.project.project_name }}</h4>
+                  <h4 class="card-title">Bug Description:</h4>
+                  {{ bug.description|safe }}
                 </div>
               </div>
 
             </div>
-
-            <div class="col-lg-4">
-             <div class="card jumbotron">
-                 <div class="card-body">
-                  <h4 class="card-title">Project name: African Bank</h4>
-                  <h4 class="card-title">Bug Description</h4>
-                  <p class="card-text">Some quick example text to build content.</p>
-                </div>
-            </div>
-            </div>
-
-            <div class="col-lg-4">
-              <div class="card jumbotron">
-                   <div class="card-body">
-                  <h4 class="card-title">Project name: CTM</h4>
-                  <h3 class="card-title">Bug Description</h3>
-                  <p class="card-text">Some quick example text to build content.</p>
-                </div>
+            {% endfor %}
+            {% else %}
+            <div class="col-lg-12">
+               <div class="alert alert-warning text-center" role="alert">
+                 <h4>There are not bugs at the moment!</h4>
               </div>
             </div>
+
+            {% endif%}
+
+ 
 
           </div>
    
