--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -17,13 +17,13 @@
           
           {% if messages %}
            {% for message in messages %}
-             <div class="alert alert-success" role="alert">
+             <div class="alert alert-success text-center" role="alert">
               {{ message }}
             </div>
             {% endfor %}
           {% endif %}
 
-         
+        <br>
          <form action="{% url 'submit_bug' %}" method="POST">
             {% csrf_token %}
             <div class="form-group">
