--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,7 +29,7 @@
           <div class="row" style="margin-top: 25px; margin-bottom: 25px;">
             <div class="col-lg-12">
             <select class="form-control" v-model="selectedproject" v-on:change="onChangeProject">
-              <option>Filter By Project</option>
+              <option value="0">All</option>
               <option v-for="project in projects" v-bind:value=[[project.id]]>[[project.project_name ]]</option>
             </select>
           </div>
