--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -42,7 +42,7 @@
                 <div class="card-body">
                   <h4 class="card-title">Project name: [[ bug.project.project_name ]]</h4>
                   <h4 class="card-title">Bug Description:</h4>
-                  [[ bug.description ]] 
+                  <p>[[ bug.description ]]</p>
                 </div>
               </div>
 
