--- a/app/templates/new-bug.html
+++ b/app/templates/new-bug.html
@@ -42,7 +42,7 @@
 
           <div class="form-group">
             {{ form.description.errors }}
-            <textarea class="form-control" id="bug-editor" placeholder="Description of the bug" name="description"></textarea>
+            <textarea class="form-control" placeholder="Description of the bug" name="description" rows="10"></textarea>
           </div>
 
 
